emptyDir/empty-dir-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: empty-dir-ingress
spec:
  rules:
    - host: nodeapp-ingress.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emptydir-service
                port:
                  number: 3002
